# stremio-addon-sdk

./: .gitignore  Cargo.toml  README.md
example-addon/: Cargo.toml  vercel.json
example-addon/api/: serverless.rs
example-addon/src/: main.rs
sdk/: Cargo.toml
sdk/res/: index.html  landing_style.css
sdk/src/: builder.rs  helpers.rs  landing.rs  lib.rs  request.rs  response.rs  router.rs  server.rs  utils.rs
