[package]
name = "example-addon"
version = "0.1.0"
edition = "2021"
rust-version = "1.78.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stremio-addon-sdk = { path = "../sdk" }
tokio = { version = "1.37.0", features = ["full"] }

[[bin]]
name = "serverless"
path = "api/serverless.rs"