[package]
name = "stremio-addon-sdk"
version = "1.0.0"
authors = ["Ivo Georgiev <ivo@strem.io>", "Sleeyax <yourd3veloper@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stremio-core = { git = "https://github.com/stremio/stremio-core" }
hyper = { version = "1.2.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["net", "rt", "macros"] }
futures = "0.3.30"
semver = "*"
url = "2.5.0"
vercel_runtime = "1.1.1"
